resolved issue with page body shifting to right between pages with and without scrollable content

--- a/src/main.css
+++ b/src/main.css
@@ -76,3 +76,7 @@ i {
 .listUsage md-divider {
   margin-top: 10px;
   margin-bottom: 0; }
+
+html {
+  overflow-y: scroll;
+}
